# production-engineer-copilot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
data/synthetic/: generate.py  well_001.json  well_002.json  well_003.json  well_004.json  well_005.json  well_006.json  well_007.json  well_008.json  well_009.json  well_010.json  well_011.json  well_012.json  well_013.json  well_014.json  well_015.json  well_016.json  well_017.json  well_018.json  well_019.json  well_020.json
demo/: app.py  requirements.txt
evals/: cases.yaml  run_evals.py  sample_review.md
evals/samples/: README.md  case_005_gas_interference.md  case_014_healthy_beam_pump.md  case_020_p_and_a.md
src/: __init__.py  agent.py  data_loader.py  report.py  tools.py
src/analyzers/: __init__.py  decline_curve.py  economics.py  esp_diagnostics.py
tests/: test_analyzers.py
